<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="#ffffff"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="30dp" >

        <EditText
            android:id="@+id/user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/username_bg"
            android:gravity="center_vertical"
            android:hint="@string/login_username"
            android:paddingLeft="35dp"
            android:singleLine="true"
            android:textColor="#2d2d2d"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/pass_word"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/user_name"
            android:background="@drawable/password_bg"
            android:gravity="center_vertical"
            android:hint="@string/login_password"
            android:inputType="textPassword"
            android:paddingLeft="35dp"
            android:singleLine="true"
            android:textColor="#2d2d2d"
            android:textSize="18sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout2"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/layout1" >

        <Button
            android:id="@+id/fotget_key"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="25dp"
            android:background="@drawable/forget_password"
            android:text="@string/menu_forgot_password"
            android:textColor="#2d2d2d"
            android:textSize="17sp"
            android:visibility="gone" />

        <Button
            android:id="@+id/sign_in_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/login_bg"
            android:text="@string/menu_user_login"
            android:textColor="#ffffff"
            android:textSize="17sp" />
    </RelativeLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:gravity="center"
        android:text="@string/huatan"
        android:textAlignment="center"
        android:textColor="#2d2d2d"
        android:textSize="20sp"
        android:visibility="gone" />

</RelativeLayout>